# solana-test

./: package.json
program/: Cargo.toml
program/src/: lib.rs
tests/: test.ts
