[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
# solana-account-info = "2.2"
# solana-pubkey = "2.2"

[lib]
crate-type = ["cdylib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-panic", "custom-heap"))'
]

[features]
custom-panic = []

# [patch.crates-io]
# solana-pubkey = { path = "/Users/lucasste/Documents/solana-sdk/pubkey" }
# solana-instruction = { path = "/Users/lucasste/Documents/solana-sdk/instruction" }
# solana-sysvar = { path = "/Users/lucasste/Documents/solana-sdk/sysvar" }
# solana-sysvar-id = { path = "/Users/lucasste/Documents/solana-sdk/sysvar-id" }